--- a/views/assets/css/viewprofile.css
+++ b/views/assets/css/viewprofile.css
@@ -130,8 +130,8 @@
             justify-content: center;
             width: 40px;
             height: 40px;
-            background-color: #607d8b;
-            color: white;
+            background-color: white;
+            color: black;
             font-size: 16px;
             text-decoration: none;
             border-radius: 50%;
